force-app/main/default/objects/Supporter_Surveys__c/Supporter_Surveys__c.object-meta.xml
<CustomObject>
    <description>Used for tracking support survey responses</description>
    <label>Supporter Survey</label>
    <nameField>
        <displayFormat>SURV-{000}</displayFormat>
        <label>Supporter Surveys Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supporter Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>