force-app/main/default/objects/Supporter_Surveys__c/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under 40</fullName>
            </value>
            <value>
                <fullName>40-50</fullName>
            </value>
            <value>
                <fullName>51-60</fullName>
            </value>
            <value>
                <fullName>61-70</fullName>
            </value>
            <value>
                <fullName>71-80</fullName>
            </value>
            <value>
                <fullName>Over 80</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>