force-app/main/default/objects/Supporter_Surveys__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Supporter Surveys</relationshipLabel>
    <relationshipName>Supporter_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>