force-app/main/default/objects/Supporter_Surveys__c/fields/Connection_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Connection_Relationship__c</fullName>
    <inlineHelpText>If so, what is their relationship to you?</inlineHelpText>
    <label>01. Variable: Connection Relationship</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Other close family member</fullName>
            </value>
            <value>
                <fullName>The child of a friend or colleague</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>