force-app/main/default/objects/Supporter_Surveys__c/fields/Connection_To_Camp_Quality_2__c.field-meta.xml
<CustomField>
    <fullName>Connection_To_Camp_Quality_2__c</fullName>
    <label>Connection To Camp Quality 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I have been a Camp Quality volunteer and witnessed how wonderful this work is</fullName>
            </value>
            <value>
                <fullName>During my working life I&apos;ve dealt with children and/or cancer</fullName>
            </value>
            <value>
                <fullName>I simply want to help children facing cancer and their families</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>