force-app/main/default/objects/Supporter_Surveys__c/fields/Connection_to_Camp_Quality__c.field-meta.xml
<CustomField>
    <fullName>Connection_to_Camp_Quality__c</fullName>
    <label>01. Connection to Camp Quality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I have seen the impact of cancer firsthand.</fullName>
                <label>a. I have seen the impact of cancer firsthand.</label>
            </value>
            <value>
                <fullName>My family was helped by Camp Quality, and I want to give back.</fullName>
                <label>b. My family was helped by Camp Quality, and I want to give back.</label>
            </value>
            <value>
                <fullName>I know someone who has benefited from Camp Quality’s work.</fullName>
                <label>c. I know someone who has benefited from Camp Quality’s work.</label>
            </value>
            <value>
                <fullName>A child that I know, or know of, has been diagnosed with cancer.</fullName>
                <label>d. A child that I know, or know of, has been diagnosed with cancer.</label>
            </value>
            <value>
                <fullName>I have been a Camp Quality volunteer and witnessed how wonderful this work is.</fullName>
                <label>e. I have been a Camp Quality volunteer and witnessed how wonderful this work is.</label>
            </value>
            <value>
                <fullName>During my working life I’ve dealt with children and/or cancer.</fullName>
                <label>f. During my working life I’ve dealt with children and/or cancer.</label>
            </value>
            <value>
                <fullName>I simply want to help children facing cancer and their families.</fullName>
                <label>g. I simply want to help children facing cancer and their families.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>