force-app/main/default/objects/Supporter_Surveys__c/fields/Consider_Bequest__c.field-meta.xml
<CustomField>
    <fullName>Consider_Bequest__c</fullName>
    <inlineHelpText>Please select one statement</inlineHelpText>
    <label>05. Consider Bequest?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I have already included Camp Quality in my Will.</fullName>
                <label>a. I have already included Camp Quality in my Will.</label>
            </value>
            <value>
                <fullName>I intend to include Camp Quality in my Will when I make or revise my Will.</fullName>
                <label>b. I intend to include Camp Quality in my Will when I make or revise my Will.</label>
            </value>
            <value>
                <fullName>I’m considering leaving a gift to Camp Quality in my Will.</fullName>
                <label>c. I’m considering leaving a gift to Camp Quality in my Will.</label>
            </value>
            <value>
                <fullName>I would like you to send me some information, please.</fullName>
                <label>d. I would like you to send me some information, please.</label>
            </value>
            <value>
                <fullName>It’s not for me, thank you.</fullName>
                <label>e. It’s not for me, thank you.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>