force-app/main/default/objects/Supporter_Surveys__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>08. Contact Details</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supporter Surveys</relationshipLabel>
    <relationshipName>Supporter_Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>