force-app/main/default/objects/Supporter_Surveys__c/fields/Demographic1__c.field-meta.xml
<CustomField>
    <fullName>Demographic1__c</fullName>
    <label>09. Demographic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am living in my own home.</fullName>
                <label>a. I am living in my own home.</label>
            </value>
            <value>
                <fullName>I live in a retirement home or aged care facility.</fullName>
                <label>b. I live in a retirement home or aged care facility.</label>
            </value>
            <value>
                <fullName>I live alone.</fullName>
                <label>c. I live alone.</label>
            </value>
            <value>
                <fullName>I live with a partner.</fullName>
                <label>d. I live with a partner.</label>
            </value>
            <value>
                <fullName>I have children and/or grandchildren.</fullName>
                <label>e. I have children and/or grandchildren.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>