force-app/main/default/objects/Supporter_Surveys__c/fields/How_did_you_first_hear_about_Camp_Qualit__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_first_hear_about_Camp_Qualit__c</fullName>
    <label>How did you first hear about Camp Qualit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook, Instagram or TikTok</fullName>
            </value>
            <value>
                <fullName>Email from Camp Quality</fullName>
            </value>
            <value>
                <fullName>Invited by a friend</fullName>
            </value>
            <value>
                <fullName>Through my workplace</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>