force-app/main/default/objects/Supporter_Surveys__c/fields/Kicc_Thoughts__c.field-meta.xml
<CustomField>
    <fullName>Kicc_Thoughts__c</fullName>
    <inlineHelpText>7. For the first time, we are running ‘Kids Impacted by Carer’s Cancer’ Camps.  Briefly tell us how you feel about supporting children who are struggling because their mum, dad, or carer has cancer?</inlineHelpText>
    <label>7. Kicc Thoughts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>