force-app/main/default/objects/Supporter_Surveys__c/fields/Motivation_for_supporting_Camp_Quality__c.field-meta.xml
<CustomField>
    <fullName>Motivation_for_supporting_Camp_Quality__c</fullName>
    <inlineHelpText>Please select one statement.</inlineHelpText>
    <label>03. Motivation for supporting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I know a cancer diagnosis can steal childhoods from children and I&apos;d like to help give those things back.</fullName>
                <label>a. I know a cancer diagnosis can steal childhoods from children and I&apos;d like to help give those things back.</label>
            </value>
            <value>
                <fullName>If my child or grandchild was diagnosed with cancer, I know I&apos;d really appreciate Camp Quality being there.</fullName>
                <label>b. If my child or grandchild was diagnosed with cancer, I know I&apos;d really appreciate Camp Quality being there.</label>
            </value>
            <value>
                <fullName>I want to help entire families affected by a childhood cancer diagnosis.</fullName>
                <label>c. I want to help entire families affected by a childhood cancer diagnosis.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>