force-app/main/default/objects/Supporter_Surveys__c/fields/Other_ways_of_supporting__c.field-meta.xml
<CustomField>
    <fullName>Other_ways_of_supporting__c</fullName>
    <inlineHelpText>Please select any that apply</inlineHelpText>
    <label>04. Other ways of supporting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Taking part in a fundraising event like a fun run, cycle or swim.</fullName>
                <label>a. Taking part in a fundraising event like a fun run, cycle or swim.</label>
            </value>
            <value>
                <fullName>Volunteering in my local Camp Quality Office - helping with events, for example.</fullName>
                <label>d. Volunteering in my local Camp Quality Office - helping with events, for example.</label>
            </value>
            <value>
                <fullName>Volunteering at a Camp Quality Camp.</fullName>
                <label>c. Volunteering at a Camp Quality Camp.</label>
            </value>
            <value>
                <fullName>Organising a fundraising event at home or work.</fullName>
                <label>b. Organising a fundraising event at home or work.</label>
            </value>
            <value>
                <fullName>Dramatically boosting funds and impact by agreeing to match the donations raised at an event or through an appeal.</fullName>
                <label>e. Dramatically boosting funds and impact by agreeing to match the donations raised at an event or through an appeal.</label>
            </value>
            <value>
                <fullName>Making a regular monthly donation so every day is a better day for children facing cancer.</fullName>
                <label>f. Making a regular monthly donation so every day is a better day for children facing cancer.</label>
            </value>
            <value>
                <fullName>Dramatically boosting funds and impact by agreeing to match the donations raised at an event or through an appeal</fullName>
                <label>g. Dramatically boosting funds and impact by agreeing to match the donations raised at an event or through an appeal</label>
            </value>
            <value>
                <fullName>h. Making an extraordinary one-off gift of $1000 or more to fund a specific project or program.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>