force-app/main/default/objects/Supporter_Surveys__c/fields/Recommend_Camp_Quality__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Camp_Quality__c</fullName>
    <inlineHelpText>6. On a scale of 0 – 10, how likely are you to recommend Camp Quality to a family member, friend or colleague who wants to support a charity? 10 would be ‘extremely likely’.</inlineHelpText>
    <label>06. Recommend Camp Quality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>