force-app/main/default/objects/Supporter_Surveys__c/fields/RG_Lapsed_Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>RG_Lapsed_Other_Comments__c</fullName>
    <label>RG Lapsed Other Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>