force-app/main/default/objects/Supporter_Surveys__c/fields/RG_Lapsed_something_we_could_improve_on__c.field-meta.xml
<CustomField>
    <fullName>RG_Lapsed_something_we_could_improve_on__c</fullName>
    <label>02. RG Lapsed something we could improve</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I have needed to direct my money elsewhere for a while.</fullName>
                <label>a. I have needed to direct my money elsewhere for a while.</label>
            </value>
            <value>
                <fullName>I would prefer to switch back from regular monthly donations to occasional donations.</fullName>
                <label>b. I would prefer to switch back from regular monthly donations to occasional donations.</label>
            </value>
            <value>
                <fullName>My bank account or credit card details have changed and I haven’t sent you updated details yet.</fullName>
                <label>c. My bank account or credit card details have changed and I haven’t sent you updated details yet.</label>
            </value>
            <value>
                <fullName>I have not found your stories motivating enough to compel me to donate.</fullName>
                <label>d. I have not found your stories motivating enough to compel me to donate.</label>
            </value>
            <value>
                <fullName>You have not provided enough information about how my donations make a difference.</fullName>
                <label>e. You have not provided enough information about how my donations make a difference.</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>f. Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>