force-app/main/default/objects/Supporter_Surveys__c/fields/Which_aspects_of_Camp_Quality_s_work_are__c.field-meta.xml
<CustomField>
    <fullName>Which_aspects_of_Camp_Quality_s_work_are__c</fullName>
    <description>Which aspects of Camp Quality&apos;s work are you most interested in?</description>
    <inlineHelpText>Select up to three</inlineHelpText>
    <label>02. Which aspects of Camp Quality’s work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recreation programs</fullName>
                <label>a. Recreation programs</label>
            </value>
            <value>
                <fullName>Education programs</fullName>
                <label>b. Education programs</label>
            </value>
            <value>
                <fullName>Hospital programs</fullName>
                <label>c. Hospital programs</label>
            </value>
            <value>
                <fullName>Digital programs - Apps</fullName>
                <label>d. Digital programs - Apps</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>