force-app/main/default/objects/Supporter_Surveys__c/fields/X01_Variable_Other__c.field-meta.xml
<CustomField>
    <fullName>X01_Variable_Other__c</fullName>
    <inlineHelpText>Please specify</inlineHelpText>
    <label>01. Variable: Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>