force-app/main/default/objects/Supporter_Surveys__c/fields/X02_RG_Lapsed_Variable_Other__c.field-meta.xml
<CustomField>
    <fullName>X02_RG_Lapsed_Variable_Other__c</fullName>
    <label>02. RG Lapsed Variable: Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>